{
    "name": "InputActions",
    "maps": [
        {
            "name": "PlayerControls",
            "id": "1345719c-1d05-4ed3-be7e-cb6d5f8ea4e4",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "cca1ee53-59c8-4d72-a8e4-7d7242037cf9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "b1832fc1-c136-4875-9185-df959fb268e4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "de81fb8b-f082-4991-a67f-6a9e47d977be",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4bce0d88-fd81-45bc-9626-f0c5903e3d3f",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}